--- a/src/progress_DEG_analysis.Rmd
+++ b/src/progress_DEG_analysis.Rmd
@@ -5,190 +5,6 @@ output: html_notebook
 
 
 ```{r}
-
-
-library(TCGAWorkflowData)
-library(TCGAbiolinks)
-library(SummarizedExperiment)
-library(edgeR)
-library(EnhancedVolcano)
-library(Seurat)
-library(lumi)
-library(tidyverse)
-options(ggrepel.max.overlaps = Inf)
-
-```
-
-
-```{r}
-mrna_query <- GDCquery(project = "TCGA-PRAD",
-                      data.category = "Transcriptome Profiling",
-                      data.type = "Gene Expression Quantification",
-                      workflow.type = "STAR - Counts")
-mrna_query$results[[1]]
-
-
-mrna_query$results[[1]] <- mrna_query$results[[1]] %>% dplyr::filter(sample_type == "Solid Tissue Normal")
-GDCdownload(mrna_query, method = "api", directory = "/Users/ds/Desktop")
-
-full_path <- "/Users/ds/Desktop/TCGA-PRAD-Normal/harmonized/Transcriptome_Profiling/Gene_Expression_Quantification/"
-
-
-
-nrml_rna <- do.call(cbind, lapply(list.files(path = full_path), FUN = function(f){
-  print(paste0("processing: ",list.files(path = paste0(full_path, f))))
-  counts <- read_tsv(file = list.files(path = paste0(full_path, f), full.names = T), skip = 6, col_names = F )
-  
-  return(data.frame(f = counts[,4]))
-  
-  
-}))
-
-
-symbols <- read_tsv(file = "/Users/ds/Desktop/TCGA-PRAD-Normal/harmonized/Transcriptome_Profiling/Gene_Expression_Quantification/0427d696-a33d-4005-ac1d-c5363754226e/b1becd71-bbed-4a0f-af9c-94b9b2af928b.rna_seq.augmented_star_gene_counts.tsv", skip = 6, col_names = F)[,2]
-
-
-nrml_rna <- cpm(nrml_rna, log = T, prior.count = 1) %>% data.frame()
-colnames(nrml_rna) <- list.files(path = full_path)
-
-
-nrml_rna <- nrml_rna[which(x =symbols$X2 %in% pca_lncrna ),] 
-
-
-row.names(nrml_rna) <- symbols$X2[symbols$X2 %in% pca_lncrna]
-
-mrna_query$results[[1]]
-
-nrml_rna <- t(nrml_rna) %>% data.frame()
-nrml_rna <- nrml_rna %>% mutate(id = row.names(.), batch = "Normal") %>% merge(dplyr::select(mrna_query$results[[1]] , c(id, cases) ))
-                                                               
-
-                                                               
-```
-
-
-#Download TCGA PRAD sample list
-```{r}
-mrna_query <- GDCquery(project = "TCGA-PRAD",
-                      data.category = "Transcriptome Profiling",
-                      data.type = "Gene Expression Quantification",
-                      workflow.type = "STAR - Counts")
-mrna_query$results[[1]]
-
-
-mrna_query$results[[1]] <- mrna_query$results[[1]] %>% dplyr::filter(sample_type == "Primary Tumor")
-#GDCdownload(mrna_query, method = "api", directory = "/Users/ds/Desktop")
-```
-
-
-```{r}
-full_path <- "/Users/ds/Desktop/projects/TCGA/TCGA-PRAD-Tumor/harmonized/Transcriptome_Profiling/Gene_Expression_Quantification/"
-
-prad_rna <- do.call(cbind, lapply(list.files(path = full_path), FUN = function(f){
-  print(paste0("processing: ",list.files(path = paste0(full_path, f))))
-  counts <- read_tsv(file = list.files(path = paste0(full_path, f), full.names = T), skip = 6, col_names = F )
-  
-  return(data.frame(f = counts[,4]))
-  
-  
-}))
-#prad_rna <- cpm(prad_rna, log = T, prior.count = 1) %>% data.frame()
-colnames(prad_rna) <- list.files(path = full_path)
-
-symbols <- read_tsv(file = "/Users/ds/Desktop/projects/TCGA/TCGA-PRAD-Tumor/harmonized/Transcriptome_Profiling/Gene_Expression_Quantification/0007888f-8d96-4c01-8251-7fef6cc71596/88215dd0-5841-44f1-9393-eefd8238cbb3.rna_seq.augmented_star_gene_counts.tsv", skip = 6, col_names = F)[,2]
-
-prad_rna$Gene <- symbols$X2
-
-
-#write.table(x = prad_rna, file = "/Users/ds/Desktop/TCGA/TCGA-PRAD-Tumor/prad_rna_cpm.txt", quote = F, sep = "\t", row.names = F, col.names = T)
-
-write.table(x = prad_rna, file = "/Users/ds/Desktop/projects/TCGA/TCGA-PRAD-Tumor/prad_rna_counts.txt", quote = F, sep = "\t", row.names = F, col.names = T)
-```
-
-
-#Format PRAD count data
-```{r}
-
-#prad_rna <- read.table(file = "/Users/ds/Desktop/TCGA/TCGA-PRAD-Tumor/prad_rna_cpm.txt", header = T)
-
-prad_rna <- read.table(file = "/Users/ds/Desktop/projects/TCGA/TCGA-PRAD-Tumor/prad_rna_counts.txt", header = T)
-ids <- intersect(prad_rna$Gene, linc$gene.name)
-
-prad_rna <- dplyr::filter(prad_rna, Gene %in% ids) #Subset lncRNAs for DEG
-prad_rna <- prad_rna[!duplicated(prad_rna$Gene),]
-
-
-row.names(prad_rna) <- prad_rna$Gene 
-
-prad_rna <- dplyr::select(prad_rna, -Gene)
-
-colnames(prad_rna) <- colnames(prad_rna) %>% gsub(pattern = "^X*", replacement = "")
-
-colnames(prad_rna) <- colnames(prad_rna) %>% gsub(pattern = "\\.", replacement = "-")
-
-
-
-prad_rna <- t(prad_rna) %>% data.frame()
-
-prad_rna <- prad_rna %>% mutate(id = row.names(.), batch = "PRAD") %>% merge(dplyr::select(mrna_query$results[[1]] , c(id, cases.submitter_id) ))
-                    
-anno_prad <- read.csv(file = "/Users/ds/Desktop/projects/TCGA/TCGA-PRAD-Tumor/prad_supp.csv", header = T)
-anno_prad <- anno_prad %>% dplyr::select(avgRNA_purity, PATIENT_ID)
-
-
-prad_rna <- inner_join(prad_rna, anno_prad, by = c("cases.submitter_id" = "PATIENT_ID")) %>% mutate(Purity = avgRNA_purity * 100, cases = cases.submitter_id)
-
-
-
-```
-
-
-
-
-#Format mCRPC count data
-```{r}
-anno_mcrpc <- read.table("/Users/ds/Desktop/projects/data/anno/202009_deepRNAseq_sample_full.txt", header =T)
-
-
-
-
-anno_mcrpc <- anno_mcrpc %>% dplyr::select(c(sample_id, wgs_id, biopsy_site,tumor_purity_wgs, tumor_purity_rna , tumor_purity_hist))
-
-
-anno_mcrpc <- anno_mcrpc %>% mutate(cases =  sample_id, Purity = tumor_purity_rna)
-
-
-
-mcrpc_rna <- read.table(file = "/Users/ds/Desktop/projects/data/rna/mCRPC_RNA_counts_genename.txt", header = T)
-mcrpc_rna <- mcrpc_rna[!duplicated(mcrpc_rna$Genename),]
-
-row.names(mcrpc_rna) <- mcrpc_rna$Genename
-mcrpc_rna <- mcrpc_rna[,-1]
-mcrpc_rna <- t(mcrpc_rna) %>% data.frame()
-row.names(mcrpc_rna) <- gsub("\\.", "-",  x = row.names(mcrpc_rna))
-
-
-mcrpc_rna <- mcrpc_rna[,colnames(mcrpc_rna) %in% linc$gene.name,] %>% mutate(cases = row.names(.), batch = "mCRPC")
-
-mcrpc_rna <- mcrpc_rna %>% merge(anno_mcrpc)
-
-query <- intersect(colnames(prad_rna), colnames(mcrpc_rna))
-
-
-
-(length(query)-2)/length( linc$gene.name)
-
-
-
-
-rna <- rbind(prad_rna[,query], mcrpc_rna[,query])
-
-
-
-
-```
-
-```{r}
 counts <- dplyr::select(rna, -c(cases, Purity, batch)) %>% t() %>% data.frame()
 colnames(counts) <- rna$cases
 
@@ -206,10 +22,10 @@ x <- x[keep.exprs,, keep.lib.size = F]
 
 #Calculate effective library size using EdgeR TMM method
 x <- calcNormFactors(x, method = "TMM")
+x <- x[row.names(x) %in% linc$gene.name,]#Subset lncrna in hg38 ###############
 
-```
 
-```{r}
+
 #Create design matrix (w/o intercept) specifying group membership
 design <- model.matrix(~ 0 + batch + Purity, data = rna) 
 
@@ -247,19 +63,55 @@ down <- bulk_deg %>% dplyr::filter(adj.P.Val < 0.1 & logFC < -1)  %>% arrange(lo
 
 
 
-plot <- EnhancedVolcano(toptable = bulk_deg, x = "logFC", y = "adj.P.Val", lab =row.names(bulk_deg), selectLab = c(up[1:20], down[1:20]), pointSize = 1 , max.overlaps	= Inf, drawConnectors = T, pCutoff = 1e-2, legendPosition = "none", title = "Differential expression analysis of lncRNAs during progression", subtitle = "mCRPC v.s PRAD", FCcutoff = 1, labSize = 3) + scale_color_viridis_d(option = "plasma", end = 0.8)
+plot <- EnhancedVolcano(toptable = bulk_deg, x = "logFC", y = "adj.P.Val", lab =row.names(bulk_deg), selectLab = c(up[1:20], down[1:20]), pointSize = 1 , max.overlaps	= Inf, drawConnectors = T, pCutoff = 1e-2, legendPosition = "none", title = "Differential expression analysis of lncRNAs during progression", subtitle = "mCRPC v.s PRAD", FCcutoff = 1, labSize = 3) 
 plot
-ggsave(filename = "/Users/ds/Desktop/plot.pdf", plot = plot, width = 10)
+ggsave(filename = "/Users/ds/Desktop/plot.pdf", plot = plot, width = 10, height = 10)
 ```
 
 
 ```{r}
 #Map up and down regulated genes to clusters
-up <- bulk_deg %>% dplyr::filter(adj.P.Val < 0.1 & logFC > 1) %>% left_join( y = filt_markers, by = c("Genes" = "gene"))
-down <- bulk_deg %>% dplyr::filter(adj.P.Val < 0.1 & logFC < -1)  %>% arrange(logFC) %>% left_join( y = filt_markers, by = c("Genes" = "gene"))
+up <- bulk_deg %>% dplyr::filter(adj.P.Val < 0.1 & logFC > 1) %>% left_join( y = final_markers, by = c("Genes" = "gene"))
+down <- bulk_deg %>% dplyr::filter(adj.P.Val < 0.1 & logFC < -1)  %>% arrange(logFC) %>% left_join( y = final_markers, by = c("Genes" = "gene"))
 
 
 
+na.omit(down)
+```
+
+
+#Map to cell types
+```{r}
+up_ae <- AverageExpression(object = bmet, features = na.omit(up)[,"Genes"], slot = "data") %>%  data.frame() %>% log1p() 
+
+
+up_ae <- up_ae %>% data.frame() %>% mutate(Genes = row.names(.)) %>% inner_join(up, by = c("Genes" = "Genes")) %>% dplyr::select(c(starts_with("RNA"), "Genes", "cluster")) 
+up_ae <- mutate(up_ae, Group = "Upregulated")
+
+down_ae <- AverageExpression(object = bmet, features = na.omit(down)[,"Genes"], slot = "data") %>%  data.frame() %>% log1p() 
+
+
+down_ae <- down_ae %>% data.frame() %>% mutate(Genes = row.names(.)) %>% inner_join(down, by = c("Genes" = "Genes")) %>% dplyr::select(c(starts_with("RNA"), "Genes", "cluster")) 
+
+down_ae <- mutate(down_ae, Group = "Downregulated")
+
+ae <- rbind(up_ae, down_ae)
+ae <- ae[!duplicated(ae$Genes),]
+
+
+ae <- ae %>% group_by(Group) %>% arrange(cluster, .by_group = T) %>% ungroup() %>% data.frame()
+row.names(ae) <- ae$Genes
+
+
+
+
+
+pheatmap(mat = dplyr::select(ae, starts_with("RNA")), annotation_row = dplyr::select(ae, c(cluster, Group)), cluster_cols = F, cluster_rows = F, scale = "row", gaps_row = nrow(dplyr::filter(ae, Group == "Downregulated")), filename = "/Users/ds/Desktop/plot.png", height = 10)
+
+
+```
+
+```{r}
 f <- up$Genes                                          
 names(f) <- up$cluster
 f <- f[!is.na(names(f))]
@@ -346,7 +198,7 @@ df
 
 bmet$cluster.dominant.cell.type
 DotPlot(object = bmet, features = "FTX", group.by = "cluster.dominant.cell.type")
-p1 <- df %>% ggplot(aes(x = FTX, color = CD4 + CD8 + TregA + TregR + CTL1 + CTL2 + NK + NKT +  Th117, y =  TGFB )) + geom_point() + geom_smooth(method = "lm", color = "black") + stat_cor() + scale_color_viridis_c(option = 'plasma', name = "Fraction NK and T cell") + ylab("MutSigDB TGFB GEX") + xlab("HCP5 GEX")
+p1 <- df %>% ggplot(aes(x = FTX, color = CD4 + CD8 + TregA + TregR + CTL1 + CTL2 + NK + NKT +  Th117, y =  TGFB )) + geom_point() + geom_smooth(method = "lm", color = "black") + stat_cor()  + ylab("MutSigDB TGFB GEX") + xlab("HCP5 GEX")
 
 
 stat.test <- df %>% wilcox_test(formula = TGFB ~ RB1) %>% add_significance()   
@@ -368,6 +220,7 @@ plot <- p1 + p2  + p3
 
 
 ```
+
 
 
 
